# lastfm-rust-logless

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: album_add_tags.rs  album_get_info.rs  album_get_tags.rs  album_get_top_tags.rs  album_remove_tags.rs  album_search.rs  auth_get_session.rs  auth_get_token.rs
src/: error.rs  lastfm.rs  lib.rs  models.rs
src/api/: album.rs  artist.rs  auth.rs  chart.rs  geo.rs  library.rs  mod.rs  parameter_builder.rs  tag.rs  track.rs  user.rs
src/api/album/: add_tags.rs  get_info.rs  get_tags.rs  get_top_tags.rs  remove_tags.rs  search.rs
src/api/artist/: add_tags.rs  get_correction.rs  get_info.rs  get_similar.rs  get_tags.rs  get_top_albums.rs  get_top_tags.rs  get_top_tracks.rs  remove_tag.rs  search.rs
src/api/auth/: get_session.rs  get_token.rs
src/api/chart/: get_top_artists.rs  get_top_tags.rs  get_top_tracks.rs
src/api/geo/: get_top_artists.rs  get_top_tracks.rs
src/api/tag/: get_info.rs  get_similar.rs  get_top_albums.rs  get_top_artists.rs  get_top_tags.rs  get_top_tracks.rs  get_weekly_chart_list.rs
src/api/track/: add_tags.rs  get_correction.rs  get_info.rs  get_similar.rs  get_tags.rs  get_top_tags.rs  love.rs  remove_tag.rs  scrobble.rs  search.rs  unlove.rs  update_now_playing.rs
src/api/user/: get_friends.rs  get_info.rs  get_loved_track.rs  get_personal_tags.rs  get_recent_tracks.rs  get_top_albums.rs  get_top_artists.rs  (+6 more)
src/models/: album_get_info_response.rs  album_get_tags.rs  album_get_top_tags.rs  auth_get_token.rs  mod.rs  tags.rs
tests/: url.rs
