[package]
name = "lastfm-rust"
version = "0.1.0"
authors = ["uppercase <uppercasee@proton.me>"]
edition = "2021"
description = "Rust library for accessing the Last.fm API."
keywords = ["lastfm", "api", "lastfm-api"]
categories = ["api-bindings"]
repository = "https://github.com/uppercasee/lastfm-rust"
license = "MIT"

[dependencies]
md5 = "0.7"
dotenv = "0.15"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
